k3s/optional/demo-app/cilium-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    ingress.cilium.io/loadbalancer-mode: shared
  name: bookinfo-ingress
  namespace: demo-app
spec:
  ingressClassName: cilium
  rules:
  - host: book.cilium.intra
    http:
      paths:
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: details
            port:
              number: 9080
        path: /details
        pathType: Prefix
  tls:
  - hosts:
    - book.cilium.intra
    secretName: tls-bookinfo-ingres-cert
