k3s/optional/demo-app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
  name: bookinfo-gateway
  namespace: demo-app
spec:
  gatewayClassName: cilium
  listeners:
  - name: https-1
    protocol: HTTPS
    port: 443
    hostname: "book.gateway.intra"
    tls:
      certificateRefs:
      - kind: Secret
        name: tls-bookinfo-gw-cert
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-bookinfo-route-1
spec:
  parentRefs:
  - name: bookinfo-gateway
  hostnames:
  - "book.gateway.intra"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /details
    backendRefs:
    - name: details
      port: 9080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-bookinfo-route-2
spec:
  parentRefs:
  - name: bookinfo-gateway
  hostnames:
  - "book.gateway.intra"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: productpage
      port: 9080
